--- a/app.html
+++ b/app.html
@@ -9,6 +9,14 @@
 </head>
 <body onresize="ajustaTamanoPalcoJogo()">
 
+    <div class="painel">
+        <div class="vidas">
+            <img src="image/coracao_vazio.png" alt="">
+            <img src="image/coracao_cheio.png" alt="">
+            <img src="image/coracao_cheio.png" alt="">
+        </div>
+        <div class="cronometro">Tempo restante: ?</div>
+    </div>
     
     <script>
         setInterval(function() {
