--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mata Mosquitos</title>
     <link rel="stylesheet" href="style.css">
     <script src="game.js"></script>
 </head>
@@ -23,7 +23,7 @@
 
         var criarMosquito = setInterval(function() {
             posicaoRandomica() 
-        }, 2000)
+        }, criaMosquitoTempo)
         
     </script>
 </body>
